Add ARM64 support to NuGet package targets
- Update .targets to conditionally include libs based on RuntimeIdentifier
- Update .csproj to use TargetArch for PackagePath

--- a/nuget/ANGLE.Static.csproj
+++ b/nuget/ANGLE.Static.csproj
@@ -23,12 +23,12 @@
     <ItemGroup>
         <None Include="$(BuildDir)/libANGLE_static.lib"
             Pack="true"
-            PackagePath="runtimes/win-x64/native/">
+            PackagePath="runtimes/win-$(TargetArch)/native/">
             <Link>libANGLE_static.lib</Link>
         </None>
         <None Include="$(BuildDir)/libGLESv2_static.lib"
             Pack="true"
-            PackagePath="runtimes/win-x64/native/">
+            PackagePath="runtimes/win-$(TargetArch)/native/">
             <Link>libGLESv2_static.lib</Link>
         </None>
     </ItemGroup>
