--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -10,28 +10,17 @@ runs:
   using: "composite"
   steps:
     - uses: actions/upload-artifact@v4
-      id: upload-artifact-1
-      with:
-        name: ${{env.ANGLEStaticName}}.7z
-        path: ${{env.ANGLEStaticName}}.7z
-
-    - uses: actions/upload-artifact@v4
-      id: upload-artifact-2
+      id: upload-nupkg
       with:
         name: ${{ env.PackageName }}.nupkg
         path: ${{ env.PackageName }}.nupkg
 
     - uses: actions/attest-build-provenance@v2
       with:
-        subject-name: ${{env.ANGLEStaticName}}.7z
-        subject-digest: sha256:${{ steps.upload-artifact-1.outputs.artifact-digest }}
-
-    - uses: actions/attest-build-provenance@v2
-      with:
         subject-name: ${{ env.PackageName }}.nupkg
-        subject-digest: sha256:${{ steps.upload-artifact-2.outputs.artifact-digest }}
+        subject-digest: sha256:${{ steps.upload-nupkg.outputs.artifact-digest }}
 
-    - if: startsWith(github.ref, 'refs/tags/')  && !contains(github.ref, '-pre')
+    - if: startsWith(github.ref, 'refs/tags/') && !contains(github.ref, '-pre')
       env:
         NUGET_KEY: ${{ inputs.NUGET_KEY }}
       shell: nu {0}
@@ -39,17 +28,17 @@ runs:
 
     - name: Prerelease artifacts
       uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')  && contains(github.ref, '-pre')
+      if: startsWith(github.ref, 'refs/tags/') && contains(github.ref, '-pre')
       with:
         prerelease: true
         files: |
-          ${{env.ANGLEStaticName}}.7z
           ${{ env.PackageName }}.nupkg
+          archives/*
 
     - name: Release artifacts
       uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')  && !contains(github.ref, '-pre')
+      if: startsWith(github.ref, 'refs/tags/') && !contains(github.ref, '-pre')
       with:
         files: |
-          ${{env.ANGLEStaticName}}.7z
           ${{ env.PackageName }}.nupkg
+          archives/*
