--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,6 @@ env:
 jobs:
   build:
     runs-on: windows-2025
-    permissions:
-      id-token: write
-      attestations: write
-      contents: write
     strategy:
       matrix:
         arch: [x64, arm64]
@@ -127,9 +123,82 @@ jobs:
           7z a -y -mx9 $ANGLEStaticName.7z libANGLE_static.lib libGLESv2_static.lib
           mv $ANGLEStaticName.7z $GITHUB_WORKSPACE
 
-      - name: dotnet pack
+      - name: Upload libs
+        uses: actions/upload-artifact@v4
+        with:
+          name: libs-${{ matrix.arch }}
+          path: |
+            ${{ env.BuildDir }}/obj/libANGLE_static.lib
+            ${{ env.BuildDir }}/obj/libGLESv2_static.lib
+
+      - name: Upload 7z archive
+        uses: actions/upload-artifact@v4
+        with:
+          name: archives-${{ matrix.arch }}
+          path: ${{ env.ANGLEStaticName }}.7z
+
+  package:
+    needs: build
+    runs-on: windows-2025
+    permissions:
+      id-token: write
+      attestations: write
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: hustcer/setup-nu@main
+        with:
+          version: "*"
+
+      - name: Setup build info
         shell: nu {0}
-        run: dotnet pack nuget/ANGLE.Static.csproj -p $"version=($env.ANGLE_Branch)-($env.UCRTVersion)-${{ matrix.arch }}-($env.BuildVersion)" -o $"($env.GITHUB_WORKSPACE)"
+        run: |
+          let count = (git rev-list --count HEAD | into int)
+          let hash = (git rev-parse --short HEAD)
+          let build = $"($count).($hash)"
+          [
+              $"BuildVersion=($build)"
+              $"PackageName=CoreUtils.ANGLE.Static.($env.ANGLE_Branch)-($build)"
+          ] | str join (char newline) | save --append $env.GITHUB_ENV
+
+      - name: Download x64 libs
+        uses: actions/download-artifact@v4
+        with:
+          name: libs-x64
+          path: libs/x64
+
+      - name: Download arm64 libs
+        uses: actions/download-artifact@v4
+        with:
+          name: libs-arm64
+          path: libs/arm64
+
+      - name: Download x64 archives
+        uses: actions/download-artifact@v4
+        with:
+          name: archives-x64
+          path: archives
+
+      - name: Download arm64 archives
+        uses: actions/download-artifact@v4
+        with:
+          name: archives-arm64
+          path: archives
+
+      - name: Create NuGet package
+        shell: nu {0}
+        run: |
+          mkdir -p nuget-staging/runtimes/win-x64/native
+          mkdir -p nuget-staging/runtimes/win-arm64/native
+
+          cp libs/x64/libANGLE_static.lib nuget-staging/runtimes/win-x64/native/
+          cp libs/x64/libGLESv2_static.lib nuget-staging/runtimes/win-x64/native/
+
+          cp libs/arm64/libANGLE_static.lib nuget-staging/runtimes/win-arm64/native/
+          cp libs/arm64/libGLESv2_static.lib nuget-staging/runtimes/win-arm64/native/
+
+          dotnet pack nuget/ANGLE.Static.csproj -p:version=$"($env.ANGLE_Branch)-($env.BuildVersion)" -p:NuGetStagingDir=$"($env.GITHUB_WORKSPACE)/nuget-staging" -o .
 
       - uses: ./.github/actions/deploy
         with:
