--- a/nuget/ANGLE.Static.csproj
+++ b/nuget/ANGLE.Static.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0-windows7.0</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <IncludeBuildOutput>false</IncludeBuildOutput>
         <NuGetStagingDir Condition="'$(NuGetStagingDir)' == ''">$(MSBuildThisFileDirectory)../nuget-staging</NuGetStagingDir>
     </PropertyGroup>
