--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -24,7 +24,7 @@ runs:
       env:
         NUGET_KEY: ${{ inputs.NUGET_KEY }}
       shell: nu {0}
-      run: dotnet nuget push $"($env.PackageName).nupkg" -k $env.NUGET_KEY -s https://api.nuget.org/v3/index.json
+      run: dotnet nuget push $"($env.PackageName).nupkg" -k $env.NUGET_KEY -s https://api.nuget.org/v3/index.json --skip-duplicate
 
     - name: Prerelease artifacts
       uses: softprops/action-gh-release@v2
